--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     ut perspiciatis unde omnis iste</p>
                 </div>
                 <div>
-                  <a href="projects/nike/index.html" class="main__tabs-btn" target="blank">подробнее</a>
+                  <a href="https://khayitov26.github.io/nike/" class="main__tabs-btn" target="blank">подробнее</a>
                 </div>
               </div>
             </div>
@@ -270,7 +270,7 @@
                     ut perspiciatis unde omnis iste</p>
                 </div>
                 <div>
-                  <a href="#" class="main__tabs-btn">подробнее</a>
+                  <a href="https://khayitov26.github.io/street88/" class="main__tabs-btn">подробнее</a>
                 </div>
               </div>
             </div>
@@ -295,7 +295,7 @@
                     ut perspiciatis unde omnis iste</p>
                 </div>
                 <div>
-                  <a href="#" class="main__tabs-btn">подробнее</a>
+                  <a href="https://khayitov26.github.io/pizza/" class="main__tabs-btn">подробнее</a>
                 </div>
               </div>
             </div>
