--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
         <div class="row justify-content-center">
           <div class="col-12 col-lg-7">
             <ul class="nav justify-content-around" role="tablist">
+              <li class="nav__item"><a href="#street88" class="main__tabs-link" data-toggle="tab">street88</a></li>
               <li class="nav__item"><a href="#nike" class="main__tabs-link active" data-toggle="tab">nike</a></li>
               <li class="nav__item"><a href="#silver" class="main__tabs-link" data-toggle="tab">silver house</a></li>
               <li class="nav__item"><a href="#orange" class="main__tabs-link" data-toggle="tab">orange-marketing</a>
               </li>
-              <li class="nav__item"><a href="#toshkent" class="main__tabs-link" data-toggle="tab">toshkent</a></li>
-              <li class="nav__item"><a href="#street88" class="main__tabs-link" data-toggle="tab">street88</a></li>
+              <li class="nav__item"><a href="#Mac" class="main__tabs-link" data-toggle="tab">Mac</a></li>
               <li class="nav__item"><a href="#pizzeria" class="main__tabs-link" data-toggle="tab">pizzeria</a></li>
             </ul>
           </div>
@@ -195,7 +195,7 @@
                     ut perspiciatis unde omnis iste</p>
                 </div>
                 <div>
-                  <a href="#" class="main__tabs-btn">подробнее</a>
+                  <a href="https://khayitov26.github.io/silver/" class="main__tabs-btn" target="blank">подробнее</a>
                 </div>
               </div>
             </div>
@@ -211,7 +211,7 @@
             <div class="col-11 col-lg-6">
               <div class="main__tabs-info d-flex flex-column justify-content-between">
                 <div>
-                  <h3 class="main__tabs-title">Макет Silver</h3>
+                  <h3 class="main__tabs-title">Макет Orange</h3>
                   <p class="main__tabs-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                     exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
@@ -220,23 +220,23 @@
                     ut perspiciatis unde omnis iste</p>
                 </div>
                 <div>
-                  <a href="#" class="main__tabs-btn">подробнее</a>
+                  <a href="https://khayitov26.github.io/orange/" class="main__tabs-btn" target="blank">подробнее</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="tab-pane fade" role="tabpanel" id="toshkent">
+      <div class="tab-pane fade" role="tabpanel" id="Mac">
         <div class="container-fluid">
           <div class="row justify-content-center">
             <div class="col-12 col-lg-6 asd">
-              <img src="images/toshkent.jpg" alt="" class="main__tabs-img w-100 h-100">
+              <img src="images/mac.jpg" alt="" class="main__tabs-img w-100 h-100">
             </div>
             <div class="col-11 col-lg-6">
               <div class="main__tabs-info d-flex flex-column justify-content-between">
                 <div>
-                  <h3 class="main__tabs-title">Макет Silver</h3>
+                  <h3 class="main__tabs-title">Макет Mac</h3>
                   <p class="main__tabs-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                     exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
@@ -245,7 +245,7 @@
                     ut perspiciatis unde omnis iste</p>
                 </div>
                 <div>
-                  <a href="#" class="main__tabs-btn">подробнее</a>
+                  <a href="https://khayitov26.github.io/mac/" class="main__tabs-btn" target="blank">подробнее</a>
                 </div>
               </div>
             </div>
@@ -261,7 +261,7 @@
             <div class="col-11 col-lg-6">
               <div class="main__tabs-info d-flex flex-column justify-content-between">
                 <div>
-                  <h3 class="main__tabs-title">Макет Silver</h3>
+                  <h3 class="main__tabs-title">Макет Street88</h3>
                   <p class="main__tabs-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                     exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
@@ -270,7 +270,7 @@
                     ut perspiciatis unde omnis iste</p>
                 </div>
                 <div>
-                  <a href="https://khayitov26.github.io/street88/" class="main__tabs-btn">подробнее</a>
+                  <a href="https://khayitov26.github.io/street88/" class="main__tabs-btn" target="blank">подробнее</a>
                 </div>
               </div>
             </div>
@@ -286,7 +286,7 @@
             <div class="col-11 col-lg-6">
               <div class="main__tabs-info d-flex flex-column justify-content-between">
                 <div>
-                  <h3 class="main__tabs-title">Макет Silver</h3>
+                  <h3 class="main__tabs-title">Макет Pizzeria</h3>
                   <p class="main__tabs-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                     exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
@@ -295,7 +295,7 @@
                     ut perspiciatis unde omnis iste</p>
                 </div>
                 <div>
-                  <a href="https://khayitov26.github.io/pizza/" class="main__tabs-btn">подробнее</a>
+                  <a href="https://khayitov26.github.io/pizza/" class="main__tabs-btn" target="blank">подробнее</a>
                 </div>
               </div>
             </div>
