--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
             <div class="carousel-item active">
               <div class="d-flex flex-wrap">
                 <div class="main__slider-image col-12 col-lg-6 col-xl-4">
-                  <img src="images/slider img.jpg" alt="" class="main__slider-img w-100 h-100">
+                  <img src="images/header_img_bg.jpg" alt="" class="main__slider-img w-100 h-100">
                 </div>
                 <div class="main__slider-info col-12 col-lg-6 col-xl-8">
-                  <h2 class="main__slider-title"><span class="main__slider-span">обучение в</span> PROWEB
+                  <h2 class="main__slider-title"><span class="main__slider-span">Lorem</span> ipsum
                   </h2>
                   <p class="main__slider-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -99,10 +99,10 @@
             <div class="carousel-item">
               <div class="d-flex flex-wrap flex-row-reverse">
                 <div class="main__slider-image col-12 col-lg-6 col-xl-4">
-                  <img src="images/slider img.jpg" alt="" class="main__slider-img w-100 h-100">
+                  <img src="images/header_img_bg.jpg" alt="" class="main__slider-img w-100 h-100">
                 </div>
                 <div class="main__slider-info col-12 col-lg-6 col-xl-8">
-                  <h2 class="main__slider-title"><span class="main__slider-span">обучение в</span> PROWEB
+                  <h2 class="main__slider-title"><span class="main__slider-span">Lorem</span> ipsum
                   </h2>
                   <p class="main__slider-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
